--- a/src/style/common.css
+++ b/src/style/common.css
@@ -3,7 +3,7 @@
 * 
 **/
 @import "base/_color.css";
-@import "base/_fn.css";
+/* @import "base/_fn.css"; */
 @import "base/_mixin.css";
 @import "base/_reset.css";
 @import "base/_base.css";
